# fcpage

./: README.md  deepseek.html  pyproject.toml
src/static/css/: input.css  styles.css
src/tailwindcss/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
src/templates/: base.html  home.html
src/templates/about/: contact.html  localizacoes.html  servicos.html  sobre.html
src/templates/emails/: contact.html
src/templates/includes/: cards.html  footer.html  header.html  hero.html
